<resources>
  <string name="app_name">Addtolist</string>
  <string name="app_description">Create a shopping lists</string>

  <string name="title_list">List</string>
  <string name="title_list_detail">List Detail</string>
  <string name="title_settings">Settings</string>
  <string name="title_account_detail">Account</string>
  <string name="title_language_selection">Select language</string>
  <string name="title_about">About</string>
  <string name="title_license">License</string>
  <string name="title_premium">Premium</string>

  <string name="title_splash">Splash</string>
  <string name="title_login">Login</string>
  <string name="btn_login">Login</string>
  <string name="title_shopping_lists">My Lists</string>

  <string name="facebook_app_id" translatable="false">FBID</string>

  <!-- Message -->
  <string name="error_occurred">An error occurred</string>

  <!-- Content Descriptions -->
  <string name="cd_splash_image">Splash Image</string>
  <string name="cd_welcome_image">Welcome Image</string>
  <string name="cd_info_image">Info Image</string>
  <string name="cd_error_image">Error Image</string>
  <string name="cd_navigate_url">Navigate Url Image</string>
  <string name="cd_create_new_list">Create new list</string>
  <string name="cd_edit_item">Edit item</string>

  <!-- Login Screen -->
  <string name="continue_with_google">Continue with Google</string>
  <string name="continue_with_facebook">Continue with Facebook</string>
  <string name="continue_as_guest">Continue as a Guest</string>

  <!-- Create List Fragment-->
  <string name="create_your_first_list">Create your first list</string>
  <string name="create_list">Create list</string>
  <string name="list_name">List name</string>
  <string name="list_color">List color</string>
  <string name="create">Create</string>
  <string name="list_name_should_not_be_empty">List name should not be empty</string>


  <string-array name="list_names">
    <item>Shopping list</item>
    <item>Groceries</item>
    <item>Monthly shopping</item>
    <item>Daily shopping</item>
  </string-array>

  <!-- List Detail Fragment-->

  <string name="list_detail">List detail</string>
  <string name="what_would_you_like_to_buy">What would you like to buy ?</string>


  <string name="very_close">Very close</string>
  <string name="product_name">Item name</string>
  <string name="product_details">Item details</string>
  <string name="product_quantity">Quantity</string>
  <string name="product_note">Note</string>
  <string name="product_unit_price">Unit price</string>

  <string name="product_category">Category</string>
  <string name="select_category">Select category</string>
  <string name="unicode" translatable="false">\U+1F37F</string>


  <string name="unit_piece">piece</string>
  <string name="unit_package">package</string>
  <string name="unit_kg">kg</string>
  <string name="unit_lt">lt</string>
  <string name="unit_gr">gr</string>

  <string name="add_note">Add note</string>
  <string name="check_done">Mark item as done</string>
  <string name="add_favorites">Add favorites</string>
  <string name="delete_item">Delete item</string>
  <string name="remove_favorites">Remove favorites</string>
  <string name="account">Account</string>
  <string name="about">About</string>
  <string name="language">Language</string>

  <string name="world_emo" translatable="false">🌎</string>
  <string name="rate_us">Rate this App</string>
  <string name="share_app">Share App</string>
  <string name="help_us_to_translate_app">Help us to translate Addtolist</string>
  <string name="twitter" translatable="false">Twitter</string>
  <string name="instagram" translatable="false">Instagram</string>
  <string name="follow_us_on_social_media">🤗 Follow us on social media</string>
  <string name="help_us_to_improve_addtolist">🌱 Help us to improve Addtolist</string>
  <string name="add_item">Add item</string>
  <string name="profile">Profile</string>
  <string name="translators">Translators</string>
  <string name="account_created_at">Created at</string>
  <string name="account_full_name">Full name</string>
  <string name="account_email">E-mail</string>
  <string name="account_logout">Logout</string>
  <string name="logout_title">@string/account_logout</string>
  <string name="logout_message">Are you sure want to logout ?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="cancel">Cancel</string>
  <string name="premium_emo" translatable="false">⭐</string>
  <string name="be_premium">Support Addtolist</string>
  <string name="be_premium_text">Addtolist application was developed by Yusuf Onder with the help of his cat Memoli 🐈. As an Addtolist supporter, you can help me work full time on the application, and benefit from some useful features.</string>
  <string name="_continue">Continue</string>
  <string name="restore_purchase">Restore purchases</string>
  <string name="unlimited_lists">✏️ Create unlimited number of lists</string>
  <string name="create_own_color">🥳 Create your own color</string>
  <string name="remove_all_ads">🤖 Remove all ads</string>
  <string name="unlimited_access_to_all_features">🤩 Unlimited access to all Addtolist features</string>

  <string name="monthly">Monthly</string>
  <string name="yearly">Yearly</string>
  <string name="lifetime">Lifetime</string>

  <string name="my_lists">My Lists</string>
  <string name="create_new_list">Create a new list</string>

  <string name="join_shopping_list">Join shopping list</string>
  <string name="popular_items">Popular items </string>

  <string name="category">Category</string>
  <string name="items">Items</string>
  <string name="recent">Recent</string>
  <string name="search_item">Search item</string>
  <string name="empty_list">Shopping list is empty now</string>

  <!-- Premium -->
  <string name="cd_premium_image">Premium image</string>
  <string name="cd_close_premium_screen">Close premium screen</string>
  <string name="premium_brand_title">Addtolist Premium</string>

  <string name="cd_profile_image">Profile image</string>
  <string name="create_account">Create account</string>
  <string name="anonymous_user_encourage_text">Create Addtolist account to share your shopping lists with other users.</string>
  <string name="continue_with_fb">Continue with Facebook</string>
  <string name="try_again">Try again</string>
  <string name="loading">Loading</string>


  <string name="about_description">Addtolist is a shopping list application where you can simply create and share shopping lists. It allows you to simply add products to the shopping lists you create. You can add information such as quantity, note and unit to the products you add. You can mark the products you have purchased as received.</string>
  <string name="privacy_policy">Privacy policy</string>
  <string name="license">License</string>
  <string name="version">Version</string>
  <string name="license_1_title">Freepik</string>
  <string name="license_1_description">Some of icons are made by [Freepik] from www.flaticon.com</string>

  <string name="format_price">%.2f %2$s</string>

  <string name="product_deleted">Item deleted</string>

  <string name="characters">Characters</string>
  <string name="quotes">Quotes</string>


</resources>