<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/settings"
  app:startDestination="@id/settingsScreen">


  <fragment
    android:id="@+id/splashScreen"
    android:name="com.yonder.addtolist.scenes.splash.presentation.SplashFragment"
    android:label="@string/title_splash"
    tools:layout="@layout/splash_fragment">
    <action
      android:id="@+id/action_splash_to_settings"
      app:destination="@id/settingsScreen" />
  </fragment>


  <fragment
    android:id="@+id/loginScreen"
    android:name="com.yonder.addtolist.scenes.login.presentation.LoginFragment"
    android:label="@string/title_login"
    tools:layout="@layout/login_fragment">
    <action
      android:id="@+id/action_login_to_shopping_list_items"
      app:destination="@id/shoppingListItemsScreen" />
  </fragment>


  <fragment
    android:id="@+id/settingsScreen"
    android:name="com.yonder.addtolist.scenes.settings.presentation.SettingsFragment"
    android:label="@string/title_settings"
    tools:layout="@layout/settings_fragment">
    <action
      android:id="@+id/action_settings_to_splash"
      app:destination="@id/splashScreen" />

    <action
      android:id="@+id/action_shopping_list_items_to_login"
      app:destination="@id/loginScreen" />

  </fragment>

</navigation>