<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/list"
  app:startDestination="@id/splashScreen">

  <fragment
    android:id="@+id/splashScreen"
    android:name="com.yonder.addtolist.scenes.splash.SplashFragment"
    android:label="@string/title_splash">
    <action
      android:id="@+id/action_splash_to_shopping_list_items"
      app:destination="@id/shoppingListItemsScreen" />

    <action
      android:id="@+id/action_splash_to_login"
      app:destination="@id/loginScreen" />
  </fragment>


  <fragment
    android:id="@+id/loginScreen"
    android:name="com.yonder.addtolist.scenes.login.LoginFragment"
    android:label="@string/title_login"
    tools:layout="@layout/login_fragment">
    <action
      android:id="@+id/action_login_to_shopping_list_items"
      app:destination="@id/shoppingListItemsScreen" />
  </fragment>

  <fragment
    android:id="@+id/shoppingListItemsScreen"
    android:name="com.yonder.addtolist.scenes.home.HomeFragment"
    android:label="@string/title_shopping_lists">

    <action
      android:id="@+id/action_shopping_list_items_to_splash"
      app:destination="@id/splashScreen"
      app:launchSingleTop="true"
      app:popUpTo="@+id/list"
      app:popUpToInclusive="true" />

    <action
      android:id="@+id/action_shopping_list_items_to_login"
      app:destination="@id/loginScreen"
      app:launchSingleTop="true"
      app:popUpTo="@+id/list"
      app:popUpToInclusive="true" />

    <action
      android:id="@+id/action_shopping_list_to_list_detail"
      app:destination="@id/listDetailFragment" />

  </fragment>



  <fragment
    android:id="@+id/listDetailFragment"
    android:name="com.yonder.addtolist.scenes.listdetail.ListDetailFragment"
    android:label="{title}">

    <argument
      android:name="userList"
      app:argType="com.yonder.addtolist.domain.uimodel.UserListUiModel"
      app:nullable="false" />

    <argument
      android:name="title"
      app:argType="string" />

    <action
      android:id="@+id/action_shopping_list_detail_to_product_detail"
      app:destination="@id/productDetailFragment" />

  </fragment>


  <fragment
    android:id="@+id/productDetailFragment"
    android:name="com.yonder.addtolist.scenes.productdetail.ProductDetailFragment"
    android:label="@string/product_details">

    <argument
      android:name="userListProduct"
      app:argType="com.yonder.addtolist.domain.uimodel.UserListProductUiModel"
      app:nullable="false" />

    <argument
        android:name="listId"
        app:argType="integer" />

  </fragment>

</navigation>