<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineLeft"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="@dimen/margin_24" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineRight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_end="@dimen/margin_24" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineTop"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="@dimen/margin_24" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textField"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/list_name"
    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
    app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
    app:layout_constraintTop_toTopOf="@+id/guidelineTop">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/tilName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.yonder.addtolist.common.ui.component.horizontalpicker.YoHorizontalPickerView
    android:id="@+id/horizontalPicker"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_8"
    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
    app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
    app:layout_constraintTop_toBottomOf="@+id/textField" />

  <TextView
    android:id="@+id/tvListColor"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_8"
    android:text="@string/list_color"
    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
    app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
    app:layout_constraintTop_toBottomOf="@+id/horizontalPicker" />

  <com.yonder.addtolist.common.ui.component.colorpicker.YoColorPickerView
    android:id="@+id/yoColorPicker"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_8"
    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
    app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
    app:layout_constraintTop_toBottomOf="@+id/tvListColor" />

  <Button
    android:id="@+id/btnCreateList"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_8"
    android:text="@string/create"
    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
    app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
    app:layout_constraintTop_toBottomOf="@+id/yoColorPicker">

  </Button>

</androidx.constraintlayout.widget.ConstraintLayout>